--- a/cart.html
+++ b/cart.html
@@ -24,9 +24,16 @@
   <h1 class="text-2xl font-bold mb-4 text-gray-700">Your Cart</h1>
   <div id="cart-items" class="space-y-4"></div>
 
-  <div class="mt-6 flex justify-between items-center">
+  <div class="mt-6 flex flex-col items-end space-y-4">
     <div id="cart-total" class="text-lg font-bold text-gray-700">Total: $0.00</div>
-    <button id="checkout-btn" class="px-6 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500">Checkout</button>
+    
+    <!-- Existing Stripe Checkout button -->
+    <button id="checkout-btn" class="px-6 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 w-full sm:w-auto">
+      Checkout
+    </button>
+
+    <!-- ✅ PayPal button renders here -->
+    <div id="paypal-button-container" class="w-full sm:w-auto"></div>
   </div>
 </main>
 
@@ -34,6 +41,9 @@
 <footer class="bg-gradient-to-r from-green-100 to-blue-100 py-6 text-center text-gray-700">
   © 2025 DjsDopeDesigns — All Rights Reserved
 </footer>
+
+<!-- ✅ PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&currency=USD"></script>
 
 <script>
 // Load cart from localStorage
@@ -68,6 +78,9 @@ function renderCartItems() {
   document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
   document.getElementById("cart-count").textContent = cart.reduce((sum, i) => sum + i.quantity, 0);
   localStorage.setItem("cart", JSON.stringify(cart));
+
+  // Update PayPal button total dynamically
+  window.cartTotal = total.toFixed(2);
 }
 
 // Cart manipulation functions
@@ -99,7 +112,7 @@ function removeItem(index){
 // Initial render
 renderCartItems();
 
-// ✅ Checkout button with your real endpoint
+// ✅ Stripe Checkout button
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   if(cart.length === 0){
@@ -119,6 +132,26 @@ document.getElementById("checkout-btn").addEventListener("click", async () => {
     alert("Failed to start checkout. Try again.");
   }
 });
+
+// ✅ PayPal Button
+paypal.Buttons({
+  createOrder: function(data, actions) {
+    return actions.order.create({
+      purchase_units: [{
+        amount: {
+          value: window.cartTotal || "0.00"
+        }
+      }]
+    });
+  },
+  onApprove: function(data, actions) {
+    return actions.order.capture().then(function(details) {
+      alert("Transaction completed by " + details.payer.name.given_name + " ✅");
+      localStorage.removeItem("cart");
+      window.location.href = "thankyou.html";
+    });
+  }
+}).render("#paypal-button-container");
 </script>
 
 </body>
