Updated product page with Tailwind + Alpine sliding cart

--- a/cart.html
+++ b/cart.html
@@ -32,6 +32,15 @@
       Checkout
     </button>
 
+<!-- Payment icons row -->
+<div class="flex flex-wrap justify-center items-center space-x-4 mt-2">
+  <img src="https://img.icons8.com/color/48/visa.png" alt="Visa" class="h-8">
+  <img src="https://img.icons8.com/color/48/mastercard-logo.png" alt="MasterCard" class="h-8">
+  <img src="https://img.icons8.com/color/48/google-pay.png" alt="Google Pay" class="h-8">
+  <img src="https://img.icons8.com/color/48/apple-pay.png" alt="Apple Pay" class="h-8">
+  <img src="https://img.icons8.com/color/48/cash-app.png" alt="Cash App" class="h-8">
+</div>
+
     <!-- ✅ PayPal button renders here -->
     <div id="paypal-button-container" class="w-full sm:w-auto"></div>
   </div>
