Updated product page with Tailwind + Alpine sliding cart

--- a/cart.html
+++ b/cart.html
@@ -33,8 +33,7 @@
     </button>
 
 <!-- Payment icons row -->
-<div class="flex justify-center mt-2">
-  <div class="flex space-x-4">
+<div class="flex flex-wrap justify-center items-center space-x-4 mt-2">
   <img src="https://img.icons8.com/color/48/visa.png" alt="Visa" class="h-8">
   <img src="https://img.icons8.com/color/48/mastercard-logo.png" alt="MasterCard" class="h-8">
   <img src="https://img.icons8.com/color/48/google-pay.png" alt="Google Pay" class="h-8">
