--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
   <img src="https://img.icons8.com/color/48/visa.png" alt="Visa" class="h-8">
   <img src="https://img.icons8.com/color/48/mastercard-logo.png" alt="MasterCard" class="h-8">
   <img src="https://img.icons8.com/color/48/google-pay.png" alt="Google Pay" class="h-8">
-  <img src="https://img.icons8.com/color/48/apple-pay.png" alt="Apple Pay" class="h-8">
+  <img src="https://www.svgrepo.com/show/303191/apple-pay-logo.svg" alt="Apple Pay" class="h-8">
 </div>
 
     <!-- ✅ PayPal button renders here -->
