--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
   <h1 class="text-2xl font-bold mb-4 text-gray-700">Your Cart</h1>
   <div id="cart-items" class="space-y-4"></div>
 
-  <div class="mt-6 flex flex-col items-end space-y-4">
+  <div class="mt-6 flex flex-col items-end space-y-4 w-full max-w-md mx-auto">
     <div id="cart-total" class="text-lg font-bold text-gray-700">Total: $0.00</div>
     
     <!-- Existing Stripe Checkout button -->
@@ -32,16 +32,60 @@
       Checkout
     </button>
 
-<!-- Payment icons row -->
-<div class="flex flex-wrap justify-center items-center space-x-4 mt-2">
-  <img src="https://img.icons8.com/color/48/visa.png" alt="Visa" class="h-8">
-  <img src="https://img.icons8.com/color/48/mastercard-logo.png" alt="MasterCard" class="h-8">
-  <img src="https://img.icons8.com/color/48/google-pay.png" alt="Google Pay" class="h-8">
-  <img src="https://www.svgrepo.com/show/303191/apple-pay-logo.svg" alt="Apple Pay" class="h-8">
-</div>
+    <!-- Payment selection -->
+    <div class="mt-4 w-full">
+      <h2 class="font-bold mb-2 text-gray-700">Select Payment Method</h2>
+      <div class="flex flex-col space-y-3">
 
-    <!-- ✅ PayPal button renders here -->
-    <div id="paypal-button-container" class="w-full sm:w-auto"></div>
+        <!-- Stripe options: Visa, MasterCard, AmEx, Discover -->
+        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
+          <input type="radio" name="payment" value="stripe" class="form-radio h-5 w-5">
+          <div class="flex space-x-2 items-center">
+            <img src="https://img.icons8.com/color/48/visa.png" class="h-8" alt="Visa">
+            <img src="https://img.icons8.com/color/48/mastercard-logo.png" class="h-8" alt="MasterCard">
+            <img src="https://img.icons8.com/color/48/amex.png" class="h-8" alt="AmEx">
+            <img src="https://img.icons8.com/color/48/discover.png" class="h-8" alt="Discover">
+          </div>
+        </label>
+
+        <!-- Google Pay -->
+        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
+          <input type="radio" name="payment" value="googlepay" class="form-radio h-5 w-5">
+          <img src="https://img.icons8.com/color/48/google-pay.png" class="h-8" alt="Google Pay">
+        </label>
+
+        <!-- Apple Pay -->
+        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
+          <input type="radio" name="payment" value="applepay" class="form-radio h-5 w-5">
+          <img src="https://www.svgrepo.com/show/303191/apple-pay-logo.svg" class="h-8" alt="Apple Pay">
+        </label>
+
+        <!-- PayPal -->
+        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
+          <input type="radio" name="payment" value="paypal" class="form-radio h-5 w-5">
+          <img src="https://img.icons8.com/color/48/paypal.png" class="h-8" alt="PayPal">
+        </label>
+
+        <!-- PayPal Pay Later -->
+        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
+          <input type="radio" name="payment" value="paypal-later" class="form-radio h-5 w-5">
+          <img src="https://img.icons8.com/color/48/paypal.png" class="h-8" alt="Pay Later">
+          <span class="text-gray-500 text-sm">Pay Later</span>
+        </label>
+
+        <!-- PayPal Debit -->
+        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
+          <input type="radio" name="payment" value="paypal-debit" class="form-radio h-5 w-5">
+          <img src="https://img.icons8.com/color/48/paypal.png" class="h-8" alt="PayPal Debit">
+          <span class="text-gray-500 text-sm">Debit</span>
+        </label>
+      </div>
+
+      <!-- Proceed Button -->
+      <button id="proceed-btn" class="mt-4 w-full bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">
+        Proceed to Checkout
+      </button>
+    </div>
   </div>
 </main>
 
@@ -49,9 +93,6 @@
 <footer class="bg-gradient-to-r from-green-100 to-blue-100 py-6 text-center text-gray-700">
   © 2025 DjsDopeDesigns — All Rights Reserved
 </footer>
-
-<!-- ✅ PayPal SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&currency=USD"></script>
 
 <script>
 // Load cart from localStorage
@@ -86,8 +127,6 @@ function renderCartItems() {
   document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
   document.getElementById("cart-count").textContent = cart.reduce((sum, i) => sum + i.quantity, 0);
   localStorage.setItem("cart", JSON.stringify(cart));
-
-  // Update PayPal button total dynamically
   window.cartTotal = total.toFixed(2);
 }
 
@@ -120,7 +159,7 @@ function removeItem(index){
 // Initial render
 renderCartItems();
 
-// ✅ Stripe Checkout button
+// Stripe Checkout
 document.getElementById("checkout-btn").addEventListener("click", async () => {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   if(cart.length === 0){
@@ -136,30 +175,55 @@ document.getElementById("checkout-btn").addEventListener("click", async () => {
     const data = await res.json();
     if(data.url) window.location.href = data.url;
   } catch(err){
-    console.error("Checkout error:", err);
-    alert("Failed to start checkout. Try again.");
+    console.error("Stripe checkout error:", err);
+    alert("Failed to start Stripe checkout.");
   }
 });
 
-// ✅ PayPal Button
-paypal.Buttons({
-  createOrder: function(data, actions) {
-    return actions.order.create({
-      purchase_units: [{
-        amount: {
-          value: window.cartTotal || "0.00"
-        }
-      }]
-    });
-  },
-  onApprove: function(data, actions) {
-    return actions.order.capture().then(function(details) {
-      alert("Transaction completed by " + details.payer.name.given_name + " ✅");
-      localStorage.removeItem("cart");
-      window.location.href = "thankyou.html";
-    });
+// Proceed to checkout based on selected payment
+document.getElementById("proceed-btn").addEventListener("click", async () => {
+  const selected = document.querySelector('input[name="payment"]:checked');
+  if (!selected) {
+    alert("Please select a payment method!");
+    return;
   }
-}).render("#paypal-button-container");
+
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart.length === 0){
+    alert("Your cart is empty!");
+    return;
+  }
+
+  switch(selected.value){
+    case "stripe":
+    case "googlepay":
+    case "applepay":
+      // Stripe checkout
+      try {
+        const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ items: cart, paymentMethod: selected.value })
+        });
+        const data = await res.json();
+        if(data.url) window.location.href = data.url;
+      } catch(err){
+        console.error("Stripe checkout error:", err);
+        alert("Failed to start Stripe checkout.");
+      }
+      break;
+
+    case "paypal":
+      window.location.href = "/paypal-standard-checkout";
+      break;
+    case "paypal-later":
+      window.location.href = "/paypal-later-checkout";
+      break;
+    case "paypal-debit":
+      window.location.href = "/paypal-debit-checkout";
+      break;
+  }
+});
 </script>
 
 </body>
