--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,9 @@
   <h1 class="text-2xl font-bold mb-4 text-gray-700">Your Cart</h1>
   <div id="cart-items" class="space-y-4"></div>
 
-  <div class="mt-6 flex flex-col items-end space-y-4 w-full max-w-md mx-auto">
+  <div class="mt-6 flex flex-col items-end space-y-4 w-full">
+
+    <!-- Cart total -->
     <div id="cart-total" class="text-lg font-bold text-gray-700">Total: $0.00</div>
     
     <!-- Existing Stripe Checkout button -->
@@ -60,28 +62,15 @@
           <img src="https://www.svgrepo.com/show/303191/apple-pay-logo.svg" class="h-8" alt="Apple Pay">
         </label>
 
-        <!-- PayPal -->
-        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
-          <input type="radio" name="payment" value="paypal" class="form-radio h-5 w-5">
-          <img src="https://img.icons8.com/color/48/paypal.png" class="h-8" alt="PayPal">
-        </label>
-
-        <!-- PayPal Pay Later -->
-        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
-          <input type="radio" name="payment" value="paypal-later" class="form-radio h-5 w-5">
-          <img src="https://img.icons8.com/color/48/paypal.png" class="h-8" alt="Pay Later">
-          <span class="text-gray-500 text-sm">Pay Later</span>
-        </label>
-
-        <!-- PayPal Debit -->
-        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
-          <input type="radio" name="payment" value="paypal-debit" class="form-radio h-5 w-5">
-          <img src="https://img.icons8.com/color/48/paypal.png" class="h-8" alt="PayPal Debit">
-          <span class="text-gray-500 text-sm">Debit</span>
-        </label>
+        <!-- PayPal buttons -->
+        <div id="paypal-buttons" class="flex flex-col space-y-2 mt-2">
+          <div id="paypal-standard"></div>
+          <div id="paypal-later"></div>
+          <div id="paypal-debit"></div>
+        </div>
       </div>
 
-      <!-- Proceed Button -->
+      <!-- Proceed Button for Stripe/Google/Apple Pay -->
       <button id="proceed-btn" class="mt-4 w-full bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">
         Proceed to Checkout
       </button>
@@ -93,6 +82,9 @@
 <footer class="bg-gradient-to-r from-green-100 to-blue-100 py-6 text-center text-gray-700">
   © 2025 DjsDopeDesigns — All Rights Reserved
 </footer>
+
+<!-- ✅ PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&currency=USD&components=buttons,funding-eligibility"></script>
 
 <script>
 // Load cart from localStorage
@@ -137,18 +129,12 @@ function increaseQuantity(index){
   localStorage.setItem("cart", JSON.stringify(cart));
   renderCartItems();
 }
-
 function decreaseQuantity(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart[index].quantity > 1){
-    cart[index].quantity--;
-  } else {
-    cart.splice(index,1);
-  }
+  if(cart[index].quantity > 1){ cart[index].quantity--; } else { cart.splice(index,1); }
   localStorage.setItem("cart", JSON.stringify(cart));
   renderCartItems();
 }
-
 function removeItem(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   cart.splice(index,1);
@@ -159,71 +145,51 @@ function removeItem(index){
 // Initial render
 renderCartItems();
 
-// Stripe Checkout
-document.getElementById("checkout-btn").addEventListener("click", async () => {
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart.length === 0){
-    alert("Your cart is empty!");
-    return;
-  }
-  try {
-    const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ items: cart })
-    });
-    const data = await res.json();
-    if(data.url) window.location.href = data.url;
-  } catch(err){
-    console.error("Stripe checkout error:", err);
-    alert("Failed to start Stripe checkout.");
-  }
-});
-
-// Proceed to checkout based on selected payment
+// Stripe/Google/Apple Pay Proceed button
 document.getElementById("proceed-btn").addEventListener("click", async () => {
   const selected = document.querySelector('input[name="payment"]:checked');
-  if (!selected) {
-    alert("Please select a payment method!");
-    return;
-  }
+  if(!selected){ alert("Please select a payment method!"); return; }
 
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart.length === 0){
-    alert("Your cart is empty!");
-    return;
-  }
+  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart.length === 0){ alert("Your cart is empty!"); return; }
 
-  switch(selected.value){
-    case "stripe":
-    case "googlepay":
-    case "applepay":
-      // Stripe checkout
-      try {
-        const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ items: cart, paymentMethod: selected.value })
-        });
-        const data = await res.json();
-        if(data.url) window.location.href = data.url;
-      } catch(err){
-        console.error("Stripe checkout error:", err);
-        alert("Failed to start Stripe checkout.");
-      }
-      break;
-
-    case "paypal":
-      window.location.href = "/paypal-standard-checkout";
-      break;
-    case "paypal-later":
-      window.location.href = "/paypal-later-checkout";
-      break;
-    case "paypal-debit":
-      window.location.href = "/paypal-debit-checkout";
-      break;
+  try {
+    let url = "";
+    if(selected.value === "stripe" || selected.value === "googlepay" || selected.value === "applepay"){
+      const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ items: cart })
+      });
+      const data = await res.json();
+      if(data.url) url = data.url;
+    }
+    if(url) window.location.href = url;
+  } catch(err){
+    console.error("Checkout error:", err);
+    alert("Failed to start checkout. Try again.");
   }
 });
+
+// ✅ PayPal buttons
+paypal.Buttons({
+  style: { layout: 'vertical', color: 'gold', shape: 'rect', label: 'paypal' },
+  createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }] }),
+  onApprove: (data, actions) => actions.order.capture().then(() => { localStorage.removeItem("cart"); window.location.href="thankyou.html"; })
+}).render('#paypal-standard');
+
+paypal.Buttons({
+  fundingSource: paypal.FUNDING.PAYLATER,
+  createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }] }),
+  onApprove: (data, actions) => actions.order.capture().then(() => { localStorage.removeItem("cart"); window.location.href="thankyou.html"; })
+}).render('#paypal-later');
+
+paypal.Buttons({
+  fundingSource: paypal.FUNDING.CARD,
+  createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }] }),
+  onApprove: (data, actions) => actions.order.capture().then(() => { localStorage.removeItem("cart"); window.location.href="thankyou.html"; })
+}).render('#paypal-debit');
+
 </script>
 
 </body>
